--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 
     <div id="print-area" class="hidden"></div>
 
-  <script>
+ <script>
     // 1. BANCO DE DADOS LOCAL
     let v12_users = JSON.parse(localStorage.getItem('v12_database')) || [
         { email: "admin@v12.com", pass: "ihvh2026", status: "AUTHORIZED", role: "ADMIN" }
@@ -565,7 +565,7 @@
                 <div style="display: flex; justify-content: space-between; align-items: flex-start; border-bottom: 4px solid #000; padding-bottom: 20px;">
                     <div>
                         <h1 style="font-size: 40px; margin: 0; font-weight: 900;">SENTINELA V12</h1>
-                        <p style="margin: 0;">SISTEMAS DE AUTORIDADE - CRISTIAN RIBEIRO</p>
+                        <p style="margin: 0;">SISTEMAS DE AUTORIDADE</p>
                         <p style="margin: 0; font-size: 12px;">SERIAL POS: ${SERIAL_P2}</p>
                     </div>
                     <div style="text-align: right; border: 2px solid #000; padding: 10px;">
