--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
             log.scrollTop = log.scrollHeight;
         }
 
-        function emitir(tipo) {
+        function emitir(tipo) { ({)
             const nome = document.getElementById('nomeInput').value;
             const doc = document.getElementById('docInput').value;
             const valor = document.getElementById('valorInput').value;
@@ -522,6 +522,8 @@
        const totalImpostos = fed + est;
 
     const printArea = document.getElementById('print-area');
+
+    ({})
      
     if (tipo === 'TERMICO') {
         printArea.innerHTML = `
