--- a/index.html
+++ b/index.html
@@ -404,7 +404,9 @@
         localStorage.setItem('v12_database', JSON.stringify(v12_users));
         atualizarPainelAdmin();
         alert("Usuário Autorizado!");
-    }// 5. FUNÇÃO EMITIR
+    }
+    
+    // 5. FUNÇÃO EMITIR
     function emitir(tipo) {
         const nome = document.getElementById('nomeInput').value;
         const valor = document.getElementById('valorInput').value;
