--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
                 <input type="email" id="v12_email" placeholder="E-mail de Comando" class="input-tactical w-full">
                 <input type="password" id="v12_pass" placeholder="Chave Criptográfica" class="input-tactical w-full">
                 <button onclick="checkV12Auth()" class="btn-orange w-full text-white font-black py-5 rounded-2xl shadow-xl uppercase tracking-widest text-sm">Iniciar Sincronização</button>
-                <p class="text-[10px] text-slate-400 mt-4 cursor-pointer hover:text-orange-500 font-bold uppercase" onclick="alert('Solicite autorização ao Administrador V12 para novo cadastro.')">Solicitar novo cadastro</p>
+                <p class="text-[10px] text-slate-400 mt-4 cursor-pointer hover:text-orange-500 font-bold uppercase" onclick="solicitarCadastro()">Solicitar novo cadastro</p>
+
             </div>
         </div>
     </div>
