--- a/index.html
+++ b/index.html
@@ -301,22 +301,21 @@
     function updateDRE() { console.log("DRE Atualizado");
     }        
 
-        function checkV12Auth() {
-        const email = document.getElementById('v12_email').value;
-        const pass = document.getElementById('v12_pass').value;
-        const user = v12_users.find(u => u.email === email && u.pass === pass);
-        }
+        function solicitarCadastro() {
+        const email = prompt("Digite o E-mail para o novo comando:");
+        const pass = prompt("Defina a Chave Criptográfica (Senha):");
 
-        if (user) {
-            if (user.status === "AUTHORIZED") {
-                document.getElementById('auth-gate').style.display = 'none';
-                addLog(`ACESSO AUTORIZADO: ${user.email.toUpperCase()}`);
-                if (user.role === "ADMIN") {
-                    const painel = document.getElementById('admin-panel');
-                    if (painel) {
-                        painel.style.display = 'block';
-                        atualizarPainelAdmin();
-                    }
+        if (email && pass) {
+            if (v12_users.find(u => u.email === email)) {
+                alert("Este e-mail já está na fila de espera.");
+                return;
+            }
+            v12_users.push({ email: email, pass: pass, status: "PENDING", role: "OPERATOR" };
+            localStorage.setItem({'v12_database', JSON.stringify(v12_users);
+            alert("Solicitação enviada! Peça ao Administrador para autorizar.");
+            addLog(`NOVA SOLICITAÇÃO: ${email}`);
+        }
+    }
                      
         let v12_finance = { receita: 0, despesa: 0, invest: 0 };
         
