--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             #print-area, #print-area * { visibility: visible; }
             #print-area { 
                 position: absolute; 
-                left: 1; 
-                top: 1; 
-                width: 100%; 
+                left: 7; 
+                top: 7; 
+                width: 10%; 
                 display: block !important; 
             }
         }
@@ -132,18 +132,18 @@
 <body>
 
     <div id="auth-gate" class="no-print">
-        <div class="bg-white p-12 rounded-[40px] shadow-2xl w-[450px] text-center border-b-8 border-orange-600">
-            <div class="v12-logo-3d inline-block mb-8">V12</div>
-            <h2 class="text-3xl font-black text-slate-800 uppercase italic mb-2 tracking-tighter">Acesso de Autoridade</h2>
-            <p class="text-slate-400 text-xs font-bold mb-10 tracking-widest uppercase">P2 H Ayin</p>
+        <div class="bg-orange p-18 rounded-[60px] shadow-4x2 w-[550px] text-center border-b-12 border-orange-700">
+            <div class="v12-logo-3d inline-block mb-12">V12</div>
+            <h2 class="text-5x2 font-black text-slate-900 uppercase italic mb-4 tracking-tighter">Acesso de Autoridade</h2>
+            <p class="text-slate-500 text-xs font-bold mb-12 tracking-widest uppercase">Yod He Vav Ayin</p>
             
             <div class="space-y-4">
-                <input type="email" id="v12_email" placeholder="E-mail de Comando" class="input-tactical w-full">
-                <input type="password" id="v12_pass" placeholder="Chave Criptográfica" class="input-tactical w-full">
+                <input type="email" id="v12_email" placeholder="Seu E-mail" class="input-tactical w-full">
+                <input type="password" id="v12_pass" placeholder="Senha Criptográfada" class="input-tactical w-full">
                 <button onclick="checkV12Auth()" class="btn-orange w-full text-white font-black py-5 rounded-2xl shadow-xl uppercase tracking-widest text-sm">Iniciar Sincronização</button>
-                <p class="text-[10px] text-slate-400 mt-4 cursor-pointer hover:text-orange-500 font-bold uppercase transition-all" 
+                <p class="text-[10px] text-slate-500 mt-6 cursor-pointer hover:text-orange-500 font-bold uppercase transition-all" 
    onclick="solicitarCadastro()">
-   Solicitar novo cadastro de operador
+   Solicite Novo Cadastro de Operador
 </p>
             </div>
         </div>
@@ -267,7 +267,7 @@
     </div>
 
     <button onclick="emitir('A4')" 
-            class="group relative mt-2 overflow-hidden bg-orange-400 p-4 rounded-2xl font-black text-white uppercase tracking-widest
+            class="group relative mt-2 overflow-hidden bg-orange-200 p-4 rounded-2xl font-White text-white uppercase tracking-widest
                    shadow-[6px_6px_12px_#070a11,-2px_-2px_10px_rgba(234,88,12,0.5)]
                    active:shadow-[inset_4px_4px_8px_#9a3412] active:translate-y-1 transition-all">
         <span class="relative z-10">Processar e Emitir Nota</span>
