--- a/index.html
+++ b/index.html
@@ -133,15 +133,15 @@
 
     <div id="auth-gate" class="no-print">
         <div class="bg-orange p-22 rounded-[90px] shadow-6x4 w-[750px] text-center border-b-18 border-orange-900">
-            <div class="v7-logo-3d inline-block mb-22">V12</div>
-            <h2 class="text-5x2 font-black text-slate-900 uppercase italic mb-4 tracking-tighter">Acesso de Autoridade</h2>
+            <div class="v41-logo-3d inline-block mb-42">V12</div>
+            <h2 class="text-5x2 font-gold text-slate-900 uppercase italic mb-4 tracking-tighter">Acesso de Autoridade</h2>
             <p class="text-slate-800 text-xs font-bold mb-22 tracking-widest uppercase">Yod He Vav Ayin</p>
             
             <div class="space-y-4">
                 <input type="email" id="v12_email" placeholder="Seu E-mail" class="input-tactical w-full">
                 <input type="password" id="v12_pass" placeholder="Senha Criptográfada" class="input-tactical w-full">
-                <button onclick="checkV12Auth()" class="btn-orange w-full text-white font-black py-5 rounded-4x2 shadow-x4 uppercase tracking-widest text-sm">Iniciar Sincronização</button>
-                <p class="text-[22px] text-slate-800 mt-12 cursor-pointer hover:text-orange-800 font-bold uppercase transition-all" 
+                <button onclick="checkV12Auth()" class="btn-orange w-full text-white font-gold py-7 rounded-6x3 shadow-x7 uppercase tracking-widest text-sm">Iniciar Sincronização</button>
+                <p class="text-[22px] text-slate-700 mt-22 cursor-pointer hover:text-orange-700 font-bold uppercase transition-all" 
    onclick="solicitarCadastro()">
    Solicite Novo Cadastro de Operador
 </p>
