--- a/index.html
+++ b/index.html
@@ -132,16 +132,16 @@
 <body>
 
     <div id="auth-gate" class="no-print">
-        <div class="bg-orange p-2 rounded-[40px] shadow-2x1 w-[450px] text-center border-b-2 border-orange-800">
-            <div class="v12-logo-3d inline-block mb-51">V12</div>
-            <h2 class="text-0x2 font-gold text-slate-900 uppercase italic mb-2 tracking-tighter">Acesso de Autoridade</h2>
+        <div class="bg-orange p-24 rounded-[200px] shadow-2x1 w-[650px] text-center border-b-2 border-orange-1000">
+            <div class="v12-logo-3d inline-block mb-150">V12</div>
+            <h2 class="text-12x2 font-gold text-slate-900 uppercase italic mb-7 tracking-tighter">Acesse</h2>
             <p class="text-slate-10 text-xs font-bold mb-1 tracking-widest uppercase">Yod He Vav Ayin</p>
             
             <div class="space-y-2">
                 <input type="email" id="v12_email" placeholder="Seu E-mail" class="input-tactical w-full">
                 <input type="password" id="v12_pass" placeholder="Senha Criptográfada" class="input-tactical w-full">
                 <button onclick="checkV12Auth()" class="btn-orange w-full text-white font-gold py-2 rounded-5x1 shadow-x5 uppercase tracking-widest text-sm">Iniciar Sincronização</button>
-                <p class="text-[8px] text-slate-800 mt-12 cursor-pointer hover:text-orange-700 font-bold uppercase transition-all" 
+                <p class="text-[22px] text-gold-1000 mt-12 cursor-pointer hover:text-orange/gold-1000 font-bold uppercase transition-all" 
    onclick="solicitarCadastro()">
    Cadastre-se
 </p>
