--- a/index.html
+++ b/index.html
@@ -214,6 +214,17 @@
 </div>
 </p>
             </div>
+
+    <div class="grid grid-cols-2 gap-4 mt-6">
+    <div class="p-4 bg-slate-900 rounded-xl border border-emerald-500/30">
+        <p class="text-[9px] text-slate-500 uppercase">Status AWS Lambda</p>
+        <p class="text-emerald-400 font-black tracking-widest">● OPERACIONAL</p>
+    </div>
+    <div class="p-4 bg-slate-900 rounded-xl border border-blue-500/30">
+        <p class="text-[9px] text-slate-500 uppercase">WhatsApp Meta API</p>
+        <p class="text-blue-400 font-black tracking-widest">● SINCRONIZADO</p>
+    </div>
+</div>
         </div>
     </div>
 
