--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                     <span class="text-orange-600">IHVH</span>
                 </h1>
                 <div class="flex items-center gap-2 mt-1">
-                    <span class="text-[11px] font-bold bg-slate-800 text-white px-2 py-0.5 rounded tracking-widest uppercase"> IHVH FINNO PAY</span>
+                    <span class="text-[11px] font-bold bg-slate-800 text-white px-2 py-0.5 rounded tracking-widest uppercase">FINNO PAY</span>
                     <span id="network-badge" class="text-[11px] font-bold bg-orange-100 text-orange-700 px-2 py-0.5 rounded italic animate-pulse">
                         🛰️ BUSCANDO REDE...
                     </span>
@@ -252,7 +252,7 @@
 
         <div class="hidden md:block text-right">
             <p class="text-[9px] font-black text-slate-400 uppercase tracking-widest">Acesso de Autoridade</p>
-            <p class="text-xs font-bold text-slate-800">${SERIAL_P2}</p>
+            <p class="text-xs font-bold text-slate-800">${SP2}</p>
         </div>
     </header>
 </div>
@@ -275,7 +275,7 @@
                 </div>
                 <div>
                     <p class="text-[10px] font-black text-orange-500 uppercase tracking-[0.3em]">Alinhamento Estratégico</p>
-                    <p id="ai-insight" class="text-slate-300 text-sm font-medium italic">"financeiro."</p>
+                    <p id="ai-insight" class="text-slate-300 text-sm font-medium italic">"financeiro"</p>
                 </div>
             </div>
             <div class="text-right border-l border-slate-700 pl-6">
@@ -1182,19 +1182,6 @@ function liberarUsuario(email) {
 
 
              <script>
-
-                     <script>
-        
-        function emitir(tipo) {
-            const nome = document.getElementById('nomeInput').value;
-            const valor = parseFloat(document.getElementById('valorInput').value) || 0;
-            const desc = document.getElementById('descInput').value;
-            if(!nome || valor <= 0) return alert("Erro: Preencha Nome e Valor.");
-            
-            const printArea = document.getElementById('print-area');
-            const dataHora = new Date().toLocaleString('pt-BR'); 
-
-    <script>
 
     // 2. DESENHA A NOTA DETALHADA (Seu código A4)
 
